Upgraded Django from 2.0.6 to 2.2.0 Added login with google account (social_django) Added security with 'rules' (https://github.com/dfunckt/django-rules) Added 403 custom page.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ db.sqlite3
 .DS_Store
 .vscode
 tmp
+blog/static/css/bootstrap_3.2.0_css_bootstrap-theme.min.css
+blog/static/css/bootstrap_3.2.0_css_bootstrap.min.css
+blog/static/css/fonts.googleapis.com_css_family_Lobster.css
